Add Transfer Money core classes

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,8 @@
 view.index.title=Home page
 
 # Validation messages
-notBlank.message = The value may not be empty!
-email.message = The value must be a valid email!
+notBlank.message = The value may not be empty
+email.message = The value must be a valid email
+transfer.money.amount.not.number=The amount is not a valid number
+transfer.money.amount.not.positive=The amount is not a positive number
+transfer.money.account.not.same.currency=Accounts must be in the same currency
