--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -5,4 +5,5 @@ notBlank.message = The value may not be empty
 email.message = The value must be a valid email
 transfer.money.amount.not.number=The amount is not a valid number
 transfer.money.amount.not.positive=The amount is not a positive number
+transfer.money.account.same=Source and target accounts cannot be the same
 transfer.money.account.not.same.currency=Accounts must be in the same currency
