--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -7,4 +7,4 @@ transfer.money.amount.not.number=The amount is not a valid number
 transfer.money.amount.not.positive=The amount is not a positive number
 transfer.money.account.same=Source and target accounts cannot be the same
 transfer.money.account.not.same.currency=Accounts must be in the same currency
-transfer.money.account.not.enough.cash=The source account doesn't have enough money for the transaction
+transfer.money.account.not.enough.cash=Source account doesn't have enough money
