Transfer Money: code clean-up

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -8,3 +8,4 @@ transfer.money.amount.not.positive=The amount is not a positive number
 transfer.money.account.same=Source and target accounts cannot be the same
 transfer.money.account.not.same.currency=Accounts must be in the same currency
 transfer.money.account.not.enough.cash=Source account doesn't have enough money
+transfer.money.unexpected.error=Unexpected error during transaction
